--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ml-bridge",
-    "version": "1.0.1",
+    "version": "1.0.0",
     "description": "Universal Machine Learning Hub for Serial Bridge",
     "main": "electron/main.js",
     "repository": {
@@ -28,6 +28,7 @@
         "@tensorflow-models/mobilenet": "^2.1.1",
         "@tensorflow/tfjs": "^4.22.0",
         "clsx": "^2.1.0",
+        "electron-fetch": "^1.9.1",
         "express": "^5.2.1",
         "framer-motion": "^11.18.2",
         "jszip": "^3.10.1",
@@ -40,6 +41,7 @@
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
+        "@electron/notarize": "^3.1.1",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.17",
         "concurrently": "^8.2.2",
@@ -58,7 +60,6 @@
             "dist/**/*",
             "electron/**/*",
             "public/**/*",
-            "node_modules/**/*",
             "package.json"
         ],
         "asarUnpack": [
