--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "node-osc": "^11.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-window": "^2.2.5",
         "socket.io": "^4.8.3",
         "socket.io-client": "^4.8.3",
         "tailwind-merge": "^2.2.1"
