--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "autoprefixer": "^10.4.17",
         "concurrently": "^8.2.2",
         "cross-env": "^7.0.3",
+        "dotenv": "^17.2.3",
         "electron": "^28.2.1",
         "electron-builder": "^24.9.1",
         "postcss": "^8.4.35",
@@ -93,9 +94,7 @@
             "entitlementsInherit": "electron/entitlements.mac.plist",
             "hardenedRuntime": true,
             "gatekeeperAssess": false,
-            "notarize": {
-                "teamId": "${env.APPLE_TEAM_ID}"
-            },
+            "notarize": "./scripts/notarize.js",
             "extendInfo": {
                 "NSCameraUsageDescription": "ML Bridge requires access to the camera for visual input and machine learning training.",
                 "NSMicrophoneUsageDescription": "ML Bridge requires access to the microphone."
